--- a/src/blocks/modules/footer/footer.pug
+++ b/src/blocks/modules/footer/footer.pug
@@ -2,7 +2,7 @@ include ../../modules/event-block3/event-block3
 
 mixin footer(data)
     footer.footer
-        #map
+        .map#map
         .footer__wrapp
             .container
                 +event-block3
