--- a/src/blocks/modules/event-block/event-block.pug
+++ b/src/blocks/modules/event-block/event-block.pug
@@ -22,5 +22,5 @@ mixin event-block(data)
                         label
                             input.form-input(type='tel' name='phone' placeholder='Введите телефон:')
                             span.input-icon.input-icon_left
-                    div(data-netlify-recaptcha='true')
+                    div(data-netlify-recaptcha='false')
                     button.btn(type='submit' ) Нужен срочный перевод
