--- a/src/blocks/modules/event-block2/event-block2.pug
+++ b/src/blocks/modules/event-block2/event-block2.pug
@@ -23,5 +23,5 @@ mixin event-block2(data)
                         label
                             input.form-input(type='email' name='email' placeholder='Введите e-mail:')
                             span.input-icon.input-icon_left
-                    div(data-netlify-recaptcha='true')
+                    div(data-netlify-recaptcha='false')
                     button.btn(type='submit') Заказать устный перевод
