--- a/src/blocks/modules/event-block3/event-block3.pug
+++ b/src/blocks/modules/event-block3/event-block3.pug
@@ -24,5 +24,5 @@ mixin event-block3(data)
                         label
                             textarea.form-textarea( placeholder='Ваш вопрос:')
                             span.input-icon.textarea-icon_left
-                    div(data-netlify-recaptcha='true')
+                    div(data-netlify-recaptcha='false')
                     button.btn(type='submit') Заказать устный перевод
