--- a/src/blocks/modules/event-block/event-block.pug
+++ b/src/blocks/modules/event-block/event-block.pug
@@ -11,9 +11,7 @@ mixin event-block(data)
                 .event-block__title Решите задачу сейчас:
 
                 form.form(name='fastTranslate',
-                    method='POST',
-                    data-netlify-recaptcha='true',
-                    data-netlify='true')
+                    method='POST')
                     .form-group
                         label
                             input.form-input(type='text' name='name' placeholder='Введите имя:')
@@ -22,5 +20,4 @@ mixin event-block(data)
                         label
                             input.form-input(type='tel' name='phone' placeholder='Введите телефон:')
                             span.input-icon.input-icon_left
-                    div(data-netlify-recaptcha='false')
                     button.btn(type='submit' ) Нужен срочный перевод
