--- a/src/blocks/modules/event-block2/event-block2.pug
+++ b/src/blocks/modules/event-block2/event-block2.pug
@@ -8,9 +8,7 @@ mixin event-block2(data)
                 .event-block__title.event-block__title-mod Мы предложим вам лучшее решение для вашей задачи:
 
                 form.form.form2(name='fastTranslate',
-                    method='POST',
-                    data-netlify-recaptcha='true',
-                    data-netlify='true')
+                    method='POST')
                     .form-group
                         label
                             input.form-input(type='text' name='name' placeholder='Введите имя:')
@@ -23,5 +21,4 @@ mixin event-block2(data)
                         label
                             input.form-input(type='email' name='email' placeholder='Введите e-mail:')
                             span.input-icon.input-icon_left
-                    div(data-netlify-recaptcha='false')
                     button.btn(type='submit') Заказать устный перевод
